# bora-ia

./: .env.example  Dockerfile  docker-compose.yml  feedback_classifier.py  main.py  pyproject.toml  requirements.txt
rag/: graph.py  prompt.py  rag.py
repositories/: chroma_repository.py
services/: chroma_service.py
