[project]
name = "bora-ia"
version = "0.1.0"
description = "IA da aplicação bora-pagar"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "fastapi[standard]>=0.115.11",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.47",
    "langchain-groq>=0.3.1",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=0.3.7",
    "langgraph>=0.3.18",
    "pymupdf>=1.25.4",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=22.0",
]
